refactoring user-blog

--- a/src/app/modules/blog/components/blog-post-card/blog-post-card.component.html
+++ b/src/app/modules/blog/components/blog-post-card/blog-post-card.component.html
@@ -1,5 +1,5 @@
 <kep-card>
-  <a>
+  <a class="d-flex justify-content-center">
     <img [src]="blog.image" [style.height.px]="cardImgHeight" alt="..." class="img-fluid">
   </a>
   <div class="card-body">
