--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -117,7 +117,7 @@
         @if (contest.userInfo.virtualContestPurchased) {
           <button
             (click)="virtualContestStart()"
-            class="btn btn-primary btn-sm round">
+            class="btn btn-primary btn-sm">
             <i [data-feather]="'contest' | iconName" [size]="16"></i>
             {{ 'StartVirtual' | translate }}
           </button>
