account settings module refactoring

--- a/src/@core/components/header/header.component.html
+++ b/src/@core/components/header/header.component.html
@@ -57,7 +57,7 @@
             </a>
             <a ngbDropdownItem [routerLink]="['/settings']">
               <span [data-feather]="'settings'" [class]="'me-1'"></span>
-              {{ 'Settings' | translate }}
+              {{ 'SETTINGS' | translate }}
             </a>
             <div class="dropdown-divider"></div>
             <button ngbDropdownItem (click)="authService.logout()">
