--- a/src/app/modules/account-settings/change-password/change-password.component.html
+++ b/src/app/modules/account-settings/change-password/change-password.component.html
@@ -1,23 +1,28 @@
 <kep-card>
+  <div class="card-header">
+    <div class="card-title">
+      <i class="font-medium-4 me-1" data-feather="lock"></i>
+      {{ 'Settings.ChangePassword' | translate }}
+    </div>
+  </div>
   <div class="card-body">
     <div class="row">
       <div class="col-12 col-sm-6">
         <div class="mb-1">
-          <label for="account-old-password">Old Password</label>
+          <label>{{ 'Settings.OldPassword' | translate }}</label>
           <div class="input-group form-password-toggle input-group-merge">
             <input
-              [type]="passwordOldType ? 'text' : 'password'"
-              class="form-control"
-              id="account-old-password"
-              name="password"
               [(ngModel)]="passwordOld"
-              placeholder="Old Password"/>
-            <div class="input-group-append">
-              <span class="input-group-text cursor-pointer"><i class="feather font-small-4" [ngClass]="{
-                        'icon-eye-off': passwordOldType,
-                        'icon-eye': !passwordOldType
-                      }" (click)="passwordOldType = !passwordOldType"></i></span>
-            </div>
+              [type]="passwordOldType ? 'text' : 'password'"
+              class="form-control create-password-input"
+            />
+            <span (click)="passwordOldType = !passwordOldType" class="show-password-button cursor-pointer text-muted">
+              @if (passwordOldType) {
+                <kep-icon type="duotone" name="toggle-on"/>
+              } @else {
+                <kep-icon type="duotone" name="toggle-off"/>
+              }
+            </span>
           </div>
         </div>
       </div>
@@ -25,48 +30,46 @@
     <div class="row">
       <div class="col-12 col-sm-6">
         <div class="mb-1">
-          <label for="account-new-password">New Password</label>
+          <label>{{ 'Settings.NewPassword' | translate }}</label>
           <div class="input-group form-password-toggle input-group-merge">
             <input
-              [type]="passwordNewType ? 'text' : 'password'"
-              id="account-new-password"
-              name="new-password"
-              class="form-control"
-              placeholder="New Password"
               [(ngModel)]="passwordNew"
+              [type]="passwordNewType ? 'text' : 'password'"
+              class="form-control create-password-input"
             />
-            <div class="input-group-append">
-              <span class="input-group-text cursor-pointer"><i class="feather font-small-4" [ngClass]="{
-                        'icon-eye-off': passwordNewType,
-                        'icon-eye': !passwordNewType
-                      }" (click)="passwordNewType = !passwordNewType"></i></span>
-            </div>
+            <span (click)="passwordNewType = !passwordNewType" class="show-password-button cursor-pointer text-muted">
+              @if (passwordNewType) {
+                <kep-icon type="duotone" name="toggle-on"/>
+              } @else {
+                <kep-icon type="duotone" name="toggle-off"/>
+              }
+            </span>
           </div>
         </div>
       </div>
       <div class="col-12 col-sm-6">
         <div class="mb-1">
-          <label for="account-retype-new-password">Retype New Password</label>
+          <label>{{ 'Settings.RetypeNewPassword' | translate }}</label>
           <div class="input-group form-password-toggle input-group-merge">
             <input
-              [type]="passwordConfirmType ? 'text' : 'password'"
-              class="form-control"
-              id="account-retype-new-password"
-              name="confirm-new-password"
-              placeholder="New Password"
               [(ngModel)]="passwordConfirm"
+              [type]="passwordConfirmType ? 'text' : 'password'"
+              class="form-control create-password-input"
             />
-            <div class="input-group-append">
-              <span class="input-group-text cursor-pointer"><i class="feather font-small-4" [ngClass]="{
-                        'icon-eye-off': passwordConfirmType,
-                        'icon-eye': !passwordConfirmType
-                      }" (click)="passwordConfirmType = !passwordConfirmType"></i></span>
-            </div>
+            <span (click)="passwordConfirmType = !passwordConfirmType" class="show-password-button cursor-pointer text-muted">
+              @if (passwordConfirmType) {
+                <kep-icon type="duotone" name="toggle-on"/>
+              } @else {
+                <kep-icon type="duotone" name="toggle-off"/>
+              }
+            </span>
           </div>
         </div>
       </div>
       <div class="col-12">
-        <button (click)="change()" type="submit" class="btn btn-primary me-1 mt-1" rippleEffect>Change</button>
+        <button (click)="change()" class="btn btn-primary me-1 mt-2" type="submit">
+          {{ 'Settings.Change' | translate }}
+        </button>
       </div>
     </div>
   </div>
