--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
 @import url('highlight.js/styles/vs2015.css');
 @import "../node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
 @import "../node_modules/ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
+@import url("../node_modules/flatpickr/dist/flatpickr.css");
 
 .switcher {
   .offcanvas-body {
