refactoring challenges page

--- a/src/app/modules/challenges/pages/challenges/sections/section-arenas/section-arenas.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-arenas/section-arenas.component.html
@@ -25,8 +25,8 @@
     </div>
 
     <div class="card-footer justify-content-center">
-      <a class="btn btn-primary" [routerLink]="Resources.Arena" [ngClass.lt-md]="'btn-sm'">
-        <kep-icon name="arena"></kep-icon>
+      <a class="btn btn-warning full-width btn-sm" [routerLink]="[Resources.Arena]" [ngClass.lt-md]="'btn-sm'">
+        <kep-icon name="arena" size="small-2"></kep-icon>
         {{ 'GoToArena' | translate }}
       </a>
     </div>
