--- a/src/app/modules/challenges/pages/challenges/sections/section-challenges/section-challenges.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-challenges/section-challenges.component.html
@@ -3,8 +3,8 @@
     <spinner></spinner>
   </div>
 } @else {
-  @for (challenge of challenges; track challenge) {
-    <challenge-card [challenge]="challenge"></challenge-card>
+  @for (challenge of challenges; track $index) {
+    <challenge-card [challenge]="challenge"/>
   }
 }
 
