--- a/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
+++ b/src/app/modules/contests/pages/contest/contest-problem/contest-problem.component.html
@@ -117,7 +117,7 @@
             </a>
           }
 
-          <kep-card>
+          <kep-card *ngIf="contest.id != 424">
             <div class="card-header">
               <div class="card-title">
                 <i data-feather="info"></i>
