--- a/src/app/styles/colors/contests.scss
+++ b/src/app/styles/colors/contests.scss
@@ -104,7 +104,7 @@ $april-fools-color3: #37a9cd;
 $math-selector: '&[class*="Math"]';
 $math-color: #00a79d;
 
-$revo-selector: '&[class*="Revo"]';
+$revo-selector: '&[class*="Qualification"]';
 $revo-color: #0048dd;
 
 // Primary color
