--- a/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
+++ b/src/app/modules/users/pages/user-profile/user-achievements/achievement/achievement.component.html
@@ -50,7 +50,7 @@
   </div>
 
   <div class="achievement-title text-center">
-    <span class="badge badge-light-{{ getColor() }}">
+    <span class="badge bg-{{ getColor() }}-transparent">
       {{ achievement.title }}
     </span>
   </div>
