--- a/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/contest-card.component.html
@@ -18,8 +18,7 @@
         <div>
           @if (contest.isRated) {
             <span class="badge bg-success">{{ 'Rated' | translate }}</span>
-          }
-          @if (!contest.isRated) {
+          } @else {
             <span class="badge bg-danger">{{ 'Unrated' | translate }}</span>
           }
         </div>
